--- a/style.css
+++ b/style.css
@@ -8,22 +8,28 @@
 
 header {
     background-color: #003580;
+     
 }
 
 #header-content {
     padding: 20px 0;
 }
 
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
 .Logo {
     display:flex;
-    justify-content: space-between;
+    justify-content: space-between; /* alinha o conteúdo na horizontal */
     padding: 10px;
 
 }
 
 .row-center {
     display: flex;
-    align-items: center;
+    align-items: center; /* alinha o conteúdo na vertical */
 }
 
 .Logo p {
@@ -41,7 +47,7 @@ header {
 
 #button-language img {
     width: 25px;
-    border-radius: 50px;
+    border-radius: 50px; /* deixar a borda redonda */
 
 }
 
@@ -104,4 +110,37 @@ header {
     padding: 12px;
     border-radius: 50px;
     background-color: hsla(0, 0%, 100%, .1);
+}
+
+#hero {
+    height: 100%;
+    background-image: url("assets/hero.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 40px 0px;
+    color: white;
+}
+
+#hero p {
+    font-size: 22px;
+    font-weight: 300;
+    margin: 20px 0;
+}
+
+#hero h1 {
+    font-size: 45px;
+    width: 50%;
+}
+#hero button {
+    background-color: #0071c2;
+    border: none;
+    padding: 12px 18px;
+}
+
+#hero button a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 30px;
+    font-size: 16px;
 }
