--- a/style.css
+++ b/style.css
@@ -144,3 +144,115 @@ header {
     margin-top: 30px;
     font-size: 16px;
 }
+
+#form-filter-content {
+    border: 2px solid #febb02;
+    background-color: #febb02;
+    border-radius: 5px;
+    display: flex;
+    height: 45px;
+    margin-top: -20px;
+}
+
+#form-filter button[type="submit"] {
+    background-color: #0071c2;
+    color: white;
+    font-size: 16px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    border: none;
+}
+
+#work-option {
+    margin-top: 15px;
+}
+
+.field {
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.field input {
+    height: 65%;
+    width: 90%;
+    border: none;
+    margin: 0 auto;
+   padding-left: 5px;
+}
+
+.field button[type="button"] {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+.info {
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.info img {
+    width: 30px;
+    height: 30px;
+    padding: 0 10px;
+}
+
+.info a {
+    text-decoration: none;
+    color:#0071CE;
+}
+
+.offers {
+    margin-top: 2rem;
+}
+
+.offers p {
+    color: #6b6b6b;
+}
+
+.offers-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.offers-banner {
+    color: white;
+    background-image: url("assets/banner-oferta.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+    border-radius: 10px;
+    padding: 1rem;
+    margin-right: 2rem;
+}
+
+.offers-banner h4, p {
+    width: 45%;
+    margin-bottom: 10px;
+}
+
+.offers-banner button {
+    background-color: #0071c2;
+    color: white;
+    padding: 10px 15px;
+    font-weight: bold;
+    border-radius: 3px;
+    margin-top: 10px;
+    border: none;
+}
+
+.offers-banner button a {
+    text-decoration: none;
+    color: white;
+}
+
+.img-app {
+    width: 150px;
+}
