--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ header {
     padding: 10px 15px;
 }
 
-.residence > div:nth-child(1) > button > a {
+.residences > div:nth-child(1) > button > a {
     text-decoration: none;
     color: #0071c2;
 }
